# pwd

./: .env.sample  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci-cd.yml
docker/: Dockerfile  Makefile  docker-compose.yml
src/: config.py
src/routes/: database.py  documents.py
src/utils/: middleware.py  resources.py
tests/: conftest.py  test_database.py  test_middleware.py
