[project]
name = "pwd"
version = "0.1.0"
description = "This is an API designed to GET documents & texts from my VPS"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "pydantic-settings>=2.13.1",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "poethepoet>=0.42.1",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py313"
line-length = 88
indent-width = 4

[tool.ruff.lint]
# "E" (Error), "F" (Pyflakes), "I" (Isort) sont les bases
select = ["E", "F", "I", "W"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.poe.tasks]
lint = "ruff check ."
format = "ruff format ."
fix = "ruff check . --fix"
up = ["docker-start", "make-up"]
rmi = ["make-rmi"]

[tool.poe.tasks.docker-start]
cmd = "docker desktop start"

[tool.poe.tasks.make-up]
cmd = "make up"
cwd = "docker"

[tool.poe.tasks.make-rmi]
cmd = "make rmi"
cwd = "docker"
